davixo hotFix(nombre completo) agregar td con nombre completo

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>David</td>
-                        <td>Condo</td>
+                        <td>Misael David</td>
+                        <td>Condo Rodriguez</td>
                     </tr>
                 </tbody>
             </table>
